synaptic (0.63.1ubuntu3) UNRELEASED; urgency=low

  [ Jean-Baptiste Lallement ]
  * * gtk/rgpreferenceswindow.cc: escape '@/:%' in proxy auth string (LP: 130289)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 31 Mar 2010 22:59:36 +0200

synaptic (0.63.1ubuntu2) lucid; urgency=low

  [ Michael Vogt ]
  * po/uk.po:
    - updated, thanks to Serhij Dubyk 
  * build from the lp:~ubuntu-core-dev/synaptic/lucid branch
  
  [ Jean-Baptiste Lallement ]
  * Fix sorting issues of the package list
    - Fix sort by name and by section (LP: #518509)
    - Improve sort by column performance
  * sort 'installed files' list in alphabetical order (LP: #32550)
  * Set version labels selectable in package properties (LP: #76568)
  * disable 'Lock Version' and 'Automatically installed' menu entries for a
    normal user (LP: #309906)
  * common/rpackagelister.cc:
    - in RPackageLister::xapianSearch() catch xapian exception to
      prevent crash when xapian interprets search string as a syntax 
      error
    - fix sorting in xapian search mode (LP: #508220)
  * gtk/gsynaptic.cc
    - Start with focus set on fast search entry (LP: #326155)
  * Select first subview on view change (LP: #403165)
  * Fix Gtk-CRITICAL when the fast search entry is cleared (LP: #385739)
  * Ignore DEL accelerator when fast search has focus (LP: #294178)
  * Do not start help viewer as root but as SUDO_USER (LP: #110224)
  * wrap lines in textarea of dialog_update_failed (LP: #237455)
  * set textarea read-only in generic error dialog (LP: #403100)
  * Change 'Icon Legend' dialog to fixed size (LP: #374376)
 
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Feb 2010 11:13:45 +0100

synaptic (0.63.1ubuntu1) lucid; urgency=low

  [ Michael Vogt ]
  * po/uk.po:
    - updated, thanks to Serhij Dubyk 
  
  [ Jean-Baptiste Lallement ]
  * Fix sorting issues of the package list
    - Fix sort by name and by section (LP: #518509)
    - Improve sort by column performance