@@ -151,6 +151,7 @@ class RPackageLister {
    unsigned int _viewMode;
 
    typedef enum {
+      LIST_SORT_DEFAULT,
       LIST_SORT_NAME_ASC,
       LIST_SORT_NAME_DES,
       LIST_SORT_SIZE_ASC,
