@@ -2,6 +2,7 @@ synaptic (0.63.1ubuntu3) UNRELEASED; urgency=low
 
   [ Jean-Baptiste Lallement ]
   * * gtk/rgpreferenceswindow.cc: escape '@/:%' in proxy auth string (LP: 130289)
+  * Sort by relevancy when doing quicksearch and no search column is set.
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 31 Mar 2010 22:59:36 +0200
 
